# swarm_stereo

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: indoor_slam_gazebo.launch  outdoor_flight_gazebo.launch
meshes/octorotor/: octorotor_base.dae  octorotor_base.stl
meshes/octorotor/blender/: octorotor.blend
src/: swarm_stereo.cpp
urdf/: asus_camera.urdf.xacro  octorotor_base.urdf.xacro  octorotor_with_asus.gazebo.xacro  octorotor_with_asus.urdf.xacro
