<?xml version="1.0"?>
<package>
  <name>swarm_stereo</name>
  <version>0.0.0</version>
  <description>The swarm_stereo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="soumyadeep9@gmail.com">dementor</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/swarm_stereo</url> -->

  <author email="soumyadeep9@gmail.com">Soumyadeep Mukherjee</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hector_gazebo_worlds</run_depend>
  <run_depend>hector_quadrotor_gazebo</run_depend>

</package>
